--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Připoj se k nám</title>
-  </head>
-  <style>
-  </style>
-  <body>
 
-  </body>
+<head>
+  <title>Připoj se k nám</title>
+</head>
+<style>
+  * {
+    background-color: black;
+    color: red;
+  }
+
+header{
+  height: 60px;
+  background-color: red;
+  color: black;
+  text-align: center;
+  font-size: 50px;
+  margin-top: 0;
+  display: block;
+  border: hidden;
+}
+
+
+
+
+  .pripojse {
+    width: 400px;
+  }
+
+  .obrazek{
+    text-align: center;
+  }
+</style>
+
+<body>
+  <header>PŘIPOJ SE K NÁM</header>
+  <div class="obrazek">
+    <img class="pripojse" src="https://files.catbox.moe/6qoqf5.jpg">
+  </div>
+</body>
+
 </html>
