--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:url" content="https://werdylp.github.io/AxolotlWeb/">
   <meta property="og:description" content="Stránka naší axolotlistické sekty">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="./PRIPOJSEKNAM.jpg">
+  <meta property="og:image" content="https://werdylp.github.io/AxolotlWeb/PRIPOJSEKNAM.jpg ">
 </head>
 <style>
   html,body {
