--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
   </div>
   
-
+<a href="desatero.html" style="margin-top: 50px;">provizorni tlacitko, klikni pro desatero</a>
   <!--GALERIE-->
   <div class="row" style="margin-top: 150px;">
     <div class="column-left">
