--- a/index.html
+++ b/index.html
@@ -97,7 +97,15 @@
   </div>
   <!--GALERIE-->
   
-
+    <h1>KONTAKTUJ NÁS</h1>
+    <form action="mailto:xxxx@xxx.xx" method="post" enctype="text/plain">
+    Váš mail: <input name="mail_odesilatele" size="20"><br>
+    Předmět: <input name="subject" size="20"><br>
+    Zpráva: <textarea name="body" rows="4" cols="30"></textarea><br>
+    <input type="submit" value="Odeslat">
+    </form>
+  
+  
 </body>
 
 </html>
