--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <!--GALERIE-->
   
     <h1>KONTAKTUJ NÁS</h1>
-    <form action="mailto:xxxx@xxx.xx" method="post" enctype="text/plain">
+    <form action="mailto:AxolotlSekta@seznam.cz" method="post" enctype="text/plain">
     Váš mail: <input name="mail_odesilatele" size="20"><br>
     Předmět: <input name="subject" size="20"><br>
     Zpráva: <textarea name="body" rows="4" cols="30"></textarea><br>
