--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
     <div class="column-right">
       <h2>Proč byste se měli připojit???</h2>
       <p>Dáme Vám smysl života</p>
+      <pre>
+Sláva Otci... (axologie)
+
+Sláva Lukáši i Matějovi
+i Axolotlu svatému,
+jako byla na počátku, i nyní i vždycky
+a na věky věků.
+Amen.
     </div>
   </div>
   
