--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <meta name="description" content="description"/>
     <meta name="author" content="werdy" />
     <meta name="keywords" content="keywords" />
+    
+    <meta property="og:title" content="Family friendly náboženství">
+    <meta property="og:site_name" content="Axolotlistický web">
+    <meta property="og:url" content="https://werdylp.github.io/AxolotlWeb/">
+    <meta property="og:description" content="Jsme přátelským spolkem, NE SEKTA!!! Jsme přátelští a chceme mír a rovnoprávnost!!! OPRAVDU!!!">
+    <meta property="og:type" content=""> 
+    <meta property="og:image" content="https://bit.ly/42Gxc42">
+    
     <link rel="stylesheet" href="./style.css" type="text/css" />
     <style type="text/css">.body { width: auto; }</style>
     <script src="script.js"></script>
