--- a/realAxolotl.html
+++ b/realAxolotl.html
@@ -28,7 +28,7 @@
     font-size: 50px;
     display: block;
     border: hidden;
-    font-family: comicSans;
+    font-family: "Comic Sans MS", "Comic Sans";
   }
 
   @font-face {
