--- a/realAxolotl.html
+++ b/realAxolotl.html
@@ -89,7 +89,8 @@ Amen.
     </div>
   </div>
   
-<a href="desatero.html" style="margin-top: 50px;">provizorni tlacitko, klikni pro desatero</a>
+<a href="desatero.html" style="margin-top: 50px; margin-left: 15%;"><img src="DESATERO.png" alt="tlacitko, klikni pro desatero"></a>
+<a href="navody.html" style="margin-top: 50px; margin-left: 75%;"><img src="NÁVODY.png" alt="tlacitko, klikni pro presunuti na navody"></a>
   <!--GALERIE-->
   <div class="row" style="margin-top: 150px;">
     <div class="column-left">
