sjednocen design webu - STILL IN PROGRESS!

--- a/lukasvari.html
+++ b/lukasvari.html
@@ -39,7 +39,7 @@
     </style>
   </head>
   <body>
-    <div class="one"><img src="jevpici.png"><a href="jakuvaritpiko.html">JAK LUKAS PIKO UVARIL</a><img src="axolotlcotyoci.png"></div>
+    <div class="one"><img src="jevpici.png"><a href="lukasvari.html">JAK LUKAS PIKO UVARIL</a><img src="axolotlcotyoci.png"><a href="jakuvaritpiko.html">JAK UVARIT PIKO PODLE RADKA Z USTI NAD LABEM</a></div>
     <div class="two"> <h1>příběh o tom, jak lukáš vařil piko</h1>
       <p>Jmenujme našeho hlavního hrdinu Lukáš. Lukáš byl talentovaný mladý kuchař, který snil o tom, že otevře vlastní útulnou restauraci a nabídne lidem jedinečné gastronomické zážitky. Byl pečlivý a kreativní, a tak neustále hledal nové způsoby, jak zlepšit své dovednosti.
         
