--- a/realAxolotl.html
+++ b/realAxolotl.html
@@ -4,15 +4,17 @@
 <head>
   <title>Připoj se k nám</title>
   <meta property="og:title" content="AXOLOTLISMUS">
-  <meta property="og:site_name" content="Sekta uctívající axolotly, Matěje (libovolný druh), Lukáše, susšenky a kyselé bonbony">
+  <meta property="og:site_name"
+    content="Sekta uctívající axolotly, Matěje (libovolný druh), Lukáše, susšenky a kyselé bonbony">
   <meta property="og:url" content="https://werdylp.github.io/AxolotlWeb/">
   <meta property="og:description" content="Stránka naší axolotlistické sekty">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://werdylp.github.io/AxolotlWeb/PRIPOJSEKNAM.jpg ">
-  
+
 </head>
 <style>
-  html,body {
+  html,
+  body {
 
     background-color: rgb(0, 0, 0);
 
@@ -22,8 +24,6 @@
 
   header {
     height: 70px;
-    background-color: red;
-    color: black;
     text-align: center;
     font-size: 50px;
     display: block;
@@ -38,6 +38,8 @@
 
   .pripojsetext {
     padding-top: 3px;
+    text-align: center;
+    padding-right: 300px;
   }
 
   .pripojsepic {
@@ -45,75 +47,78 @@
   }
 
 
-.column-left{ float: left; width: 33.333%; text-align: center;}
-.column-right{ float: right; width: 33.333%; text-align: center;}
-.column-center{ display: inline-block; width: 33.333%; text-align: center;}
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+      body{
+        background-color: black;
+      }
+div
+{
+    text-align: center;
+
+
+    padding: 10px;
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
+    height: 1000px;
+    width:15%;
 }
+.one
+{
+    background-color:red;    
+    float: left;  
+    font-size: 30px;
+    color: white;
+}
+.two
+{
+    background-color:black;
+    float: left;
+    width: 60%;
+    align-items: initial;
+}
+.three
+{
+  font-size: 30px;
+    color: white;
+    background-color: red;
+    float: left;
+}
+  
 </style>
 
 <body>
-  <header>
-    <div class="pripojsetext">PŘIPOJ SE K NÁM</div>
-  </header>
-<!--  <div class="row">
-    <div class="column"></div>
-    <div class="column"><img class="pripojsepic" src="PRIPOJSEKNAM.jpg"></div>
-    <div class="column"></div> 
-  </div> -->
 
-  <div class="row">
-    <div class="column-left">
-      <h2>AXOLOTLISMUS</h2>
-      <p>Jsme sekta a chceme nadvládu nad světem, spoustu sušenek, kyselých bonbonů a Matějů!</p>
-    </div>
-    <div class="column-center">
-      <img class="pripojsepic" src="PRIPOJSEKNAM.jpg">
-    </div>
-    <div class="column-right">
-      <h2>Proč byste se měli připojit???</h2>
-      <p>Dáme Vám smysl života</p>
-      <pre>
+<div class="one"><img src="jevpici.png"><a href="lukasvari.html">JAK LUKAS PIKO UVARIL</a><img src="axolotlcotyoci.png"><a href="jakuvaritpiko.html">JAK UVARIT PIKO PODLE RADKA Z USTI NAD LABEM</a></div>
+
+  <div class="two">
+    <header>
+      <div class="pripojsetext">PŘIPOJ&nbsp;SE&nbsp;K&nbsp;NÁM</div>
+    </header>
+
+        <h2>AXOLOTLISMUS</h2>
+        <p>Jsme sekta a chceme nadvládu nad světem, spoustu sušenek, kyselých bonbonů a Matějů!</p>
+     
+        <img class="pripojsepic" src="PRIPOJSEKNAM.jpg">
+        <h2>Proč byste se měli připojit???</h2>
+        <p>Dáme Vám smysl života</p>
+        <p>
 Sláva Otci... (axologie)
 
 Sláva Lukáši i Matějovi
 i Axolotlu svatému,
 jako byla na počátku, i nyní i vždycky
 a na věky věků.
-Amen.
-    </div>
+Amen.</p>
+
+ 
+<a href="desatero.html" style="margin-top: 10px; margin-left: 5%;"><img src="DESATERO.png" alt="tlacitko, klikni pro desatero"></a>
+<a href="navody.html" style="margin-top: 50px; margin-left: 15%;"><img src="NÁVODY.png" alt="tlacitko, klikni pro presunuti na navody"></a>
+
+
   </div>
-  
-<a href="desatero.html" style="margin-top: 50px; margin-left: 15%;"><img src="DESATERO.png" alt="tlacitko, klikni pro desatero"></a>
-<a href="navody.html" style="margin-top: 50px; margin-left: 75%;"><img src="NÁVODY.png" alt="tlacitko, klikni pro presunuti na navody"></a>
-  <!--GALERIE-->
-  <div class="row" style="margin-top: 150px;">
-    <div class="column-left">
-      <img src="https://images.pexels.com/photos/216640/pexels-photo-216640.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
-      width="400px">
-    </div>
-    <div class="column-center">
-      <img src="AXOHELL.jpg" style="width: 400px;">
-    </div>
-    <div class="column-right">
-      <img src="https://cdn.pixabay.com/photo/2021/12/14/15/16/axolotl-6870652_1280.jpg" width="400">
-    </div>
-  </div>
-  <!--GALERIE-->
-  
-    <h1>KONTAKTUJ NÁS</h1>
-    <form action="mailto:AxolotlSekta@seznam.cz" method="post" enctype="text/plain">
-    Váš mail: <input name="mail_odesilatele" size="20"><br>
-    Předmět: <input name="subject" size="20"><br>
-    Zpráva: <textarea name="body" rows="4" cols="30"></textarea><br>
-    <input type="submit" value="Odeslat">
-    </form>
-  
+
+  <div class="three"></div>
   
 </body>
 
