pridan letajici odkaz (fakt cool)

--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
 
 
 
-.box b {
+.box a {
   display: block;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  
   background-color: #999999;
   box-shadow: inset -5px -5px 5px rgba(0,0,0,.6), 15px 15px 2px rgba(0,0,0,.04);
   position: absolute;
-  -webkit-animation: moveX 15s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate;
-  -moz-animation: moveX 15s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate;
-  -o-animation: moveX 15s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate;
-  animation: moveX 15s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate;
+  -webkit-animation: moveX 25s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate;
+  -moz-animation: moveX 25s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate;
+  -o-animation: moveX 25s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate;
+  animation: moveX 25s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate;
 }
 
 @-webkit-keyframes moveX {
@@ -97,14 +97,14 @@
     
     <div class="one"><img src="assets/axolotl2.png"><a href="https://www.superzoo.cz/skola/axolotl-mexicky-neobvykly-mazlicek-do-akvaria/">JAK SE STARAT O AXOLOTLA</a><img src="assets/axolotl.png"><a href="https://kackojicin.cz/" >KÁČKO JIČÍN</a></div>
       <div class="two">
-        <h1>Ahoj, vítej na AXOLOTL WEBU <a href="realAxolotl.html"><img src="axolotl.jpeg" width="80px" ></a></h1>
+        <h1>Ahoj, vítej na AXOLOTL WEBU</h1>
 
         <div id="hodiny">&nbsp;</div>
         <div id="datum">&nbsp;</div>
         <div id="svatek">&nbsp;</div>
       </div>
       <div class="three"><p>TENTO WEB NEMÁ NIC SPOLEČNÉHO S VAŘENÍM PIKA NEBO NADVLÁDOU SVĚTU!!!</p></div>
-      <div class="box"><b></b></div>
+      <div class="box"><a href="realAxolotl.html"><img src="axolotl.jpeg" alt="axolotl" style="width: 100px; height: 100px;"></a></div>
 
 
   </body>
