--- a/navody.html
+++ b/navody.html
@@ -12,7 +12,7 @@
 {
     text-align: center;
     font-size: 30px;
-    color: white;
+    color: rgb(255, 0, 0);
     padding: 10px;
     display: inline-block;
     align-items: center;
@@ -42,7 +42,7 @@
   </head>
   <body>
       <div class="one"><img src="jevpici.png"><a href="lukasvari.html">JAK LUKAS PIKO UVARIL</a><img src="axolotlcotyoci.png"><a href="jakuvaritpiko.html">JAK UVARIT PIKO PODLE RADKA Z USTI NAD LABEM</a></div>
-      <div class="two">Section 2</div>
+      <div class="two"><h1>VÍTEJTE V NÁVODECH!</h1><p>V návodech seženete informace a postupy k přípravě legálních omamných substancí</p></div>
       <div class="three">Section 3</div>
     
     <header></header>
