--- a/jakuvaritpiko.html
+++ b/jakuvaritpiko.html
@@ -51,7 +51,7 @@
       
       „Při vytřepávání opět inj. stříkačnou vraženou do hrdla petiny. Stále je však v tekutém stavu a proto jej (nejlépe nad kvalitním zapalovačem) odpaříme a vzniknou krystalky více či méně kontaminovaného pervitinu. Ten následně opět zředíme a vpravíme do žíly.“
     </p></div>
-    <div class="three">Section 3</div>
+    <div class="three"></div>
   
   </body>
 </html>
