updatovana firendly maskujici cast

--- a/friendlynavody.html
+++ b/friendlynavody.html
@@ -22,19 +22,19 @@
 }
 .one
 {
-    background-color:red;    
+    background-color:pink;    
     float: left;  
 }
 .two
 {
-    background-color:black;
+    background-color:pink;
     float: left;
     width: 60%;
     align-items: initial;
 }
 .three
 {
-    background-color: red;
+    background-color: pink;
     float: left;
 }
     </style>
