--- a/realAxolotl.html
+++ b/realAxolotl.html
@@ -118,7 +118,7 @@ Amen.</p>
 
   </div>
 
-  <div class="three"></div>
+  <div class="three">CHCETE SE NAUČIT VAŘIT PIKO A UBALIT BRKO? KONTAKTUJTE NÁS!</div>
   
 </body>
 
